force-app/main/default/objects/GenesysAgentStatusMapping__mdt/GenesysAgentStatusMapping__mdt.object-meta.xml
<CustomObject>
    <description>Contains the status mapping definitions required to synchronise Genesys CTI status and Omni Agent Presence Status and vice versa</description>
    <label>Genesys Agent Status Mapping</label>
    <pluralLabel>Genesys Agent Status Mappings</pluralLabel>
</CustomObject>