force-app/main/default/objects/GenesysAgentStatusMapping__mdt/fields/GenesysStatusId__c.field-meta.xml
<CustomField>
    <fullName>GenesysStatusId__c</fullName>
    <description>UUID That represents Genesys Status which is mapped to the Salesforce Service Presence Status</description>
    <inlineHelpText>UUID That represents Genesys Status which is mapped to the Salesforce Service Presence Status</inlineHelpText>
    <label>Genesys Status Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>