force-app/main/default/objects/GenesysAgentStatusMapping__mdt/fields/GenesysStatusLabel__c.field-meta.xml
<CustomField>
    <fullName>GenesysStatusLabel__c</fullName>
    <description>The label that represents the Genesys Status Id. This field is just for troubleshooting and is not used in the mappings</description>
    <inlineHelpText>The label that represents the Genesys Status Id. This field is just for troubleshooting and is not used in the mappings</inlineHelpText>
    <label>Genesys Status Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>