force-app/main/default/objects/GenesysAgentStatusMapping__mdt/fields/SalesforcePresenceStatus__c.field-meta.xml
<CustomField>
    <fullName>SalesforcePresenceStatus__c</fullName>
    <description>Provide the Service Presence Status DeveloperName. This will be mapped to the Genesys Target Status Id</description>
    <inlineHelpText>Provide the Service Presence Status DeveloperName</inlineHelpText>
    <label>Salesforce Service Presence Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>