force-app/main/default/objects/GenesysAgentStatusMapping__mdt/fields/SyncDirection__c.field-meta.xml
<CustomField>
    <fullName>SyncDirection__c</fullName>
    <dataSensitivity>Internal</dataSensitivity>
    <defaultValue>&quot;Any&quot;</defaultValue>
    <description>As multiple Genesys statuses are mapped to the same Salesfoprce Omni Presence Status, the system has to distinguish the correct mapping</description>
    <label>Sync Direction</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Any</fullName>
                <default>true</default>
                <label>Any</label>
            </value>
            <value>
                <fullName>Gen =&gt; SF</fullName>
            </value>
            <value>
                <fullName>SF =&gt; Gen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>