force-app/main/default/objects/GenesysAgentStatusMapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>SalesforcePresenceStatus__c</columns>
    <columns>GenesysStatusLabel__c</columns>
    <columns>GenesysStatusId__c</columns>
    <columns>SyncDirection__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>